Fix bug #68262: Broken reference across cloned objects